Changelog for Shake

    Fix incorrect units when showing profile to the console
    Require the extra library
    #178, make --help show the current executable name
0.13.4
    #171, fix the --demo mode on Linux
0.13.3
    Ensure you wait until the progress thread cleans up
    Add --demo mode
    Add --progress=record and --progress=replay
    Add -j to run with one thread per processor
    Fix progress reporting to work even on the first run
    Apply abbreviations to staunch failure messages
    Fix failure progress messages during staunch mode
    #165, make |*> matching with simple files much faster
    Add toStandard to the FilePath module
    #130, support msvc_deps_prefix in Ninja
    #157, allow variable substitution in include/subninja statements
    #147, add the version in the profile reports
    #147, add --numeric-version flag
    #28, switch to continuation passing style, uses far less threads
    #156, add readConfigFileWithEnv for configs with an initial env
    #129, fix processor count detection on Mac with -threaded
    #155, add --live and shakeLiveFiles
    #153, handle escaped spaces in parseMakefile
    #152, fix typo in the manual
    Add copyFileChanged
    Fix the leaf column in profile reports
    Add Maybe instances for cmd arguments
    Add a --profile flag (alias for --report)
    Switch to an underlying continuation monad
0.13.2
    #95, ensure progress never gets corrupted
    #124, add a profile report demo
    #128, allow long Ninja command lines
    Fix --report=- for builds with no commands in them
0.13.1
    Remove all package upper bounds
    #126, Ninja compatibility if Ninja fails to create a file
    #123, generate Chrome compatible traces
0.13
    #122, make --report=- write a report to stdout
    Improve the profile report summary
    #122, turn shakeReport into a list of files, instead of a Maybe
    #60, improve how command lines are printed out
    #113, print info about copyFile' and removeFilesAfter at -V